# three-gods-riddle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  llm.yaml.template  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  models.py
app/core/: config.py  exceptions.py  health.py  logging.py
app/services/: game_service.py  llm_service.py
app/services/prompts/: __init__.py  validator.py
deploy/: .env.example  README.md  docker-compose.yml
frontend/: .dockerignore  .prettierignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/Admin/: Dashboard.tsx  UserList.tsx  index.ts
frontend/src/components/Auth/: AuthPage.tsx  ChangePasswordForm.tsx  LoginForm.tsx  RegisterForm.tsx  index.ts
frontend/src/components/Game/: GameBoard.tsx  GodCard.tsx  MysticalAvatar.tsx  QuestionArea.tsx  ResultModal.tsx  index.ts
frontend/src/components/History/: GameReplay.tsx  HistoryList.tsx  index.ts
frontend/src/components/Layout/: Navbar.tsx
frontend/src/components/Tutorial/: TutorialOverlay.tsx
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
static/: script.js  style.css
templates/: index.html
tests/: conftest.py
tests/integration/: test_game_api.py
tests/unit/: test_prompts.py
